[package]
name = "sunny-marco"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.11"
async-trait = "0.1.66"
axum = "0.6"
config = "0.13"
dotenv = "0.15"
redis = { version = "0.22.3", features = ["tokio-comp", "cluster", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1.25", features = ["full"] }
tower-http = { version = "0.3.5", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sunny-derive-trait = { path = "../sunny-derive-trait" }
sunny-derive = { path = "../sunny-derive-trait/sunny-derive" }
