[package]
name = "sunny_mod01"
version = "0.1.0"
authors = ["Sunnyregion <jinheking@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "animal"
path = "./animal/src/lib.rs"
#animal = {animal = "./animal"}
