[package]
name = "channel05"
version = "0.1.0"
authors = ["sunny <qi.cao@cloudminds.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
[profile.release]
opt-level = 3
lto = true