[package]
name = "channel06"
version = "0.1.0"
authors = ["sunny <qi.cao@cloudminds.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.17"
tokio = { version = "1.11.0", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
