[package]
name = "c2rust02"
version = "0.1.0"
authors = ["sunny <qi.cao@cloudminds.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
chrono = "0.4"
chrono-tz = "0.5"
iana-time-zone = "0.1"

[build-dependencies]
cc = "1.0"